Bonus part 1 completed

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -123,12 +123,12 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x209703e4860>,\n",
-       " 'date': '2010-01-01',\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x26fad4268d0>,\n",
+       " 'tobs': 65.0,\n",
        " 'prcp': 0.08,\n",
-       " 'id': 1,\n",
        " 'station': 'USC00519397',\n",
-       " 'tobs': 65.0}"
+       " 'date': '2010-01-01',\n",
+       " 'id': 1}"
       ]
      },
      "execution_count": 9,
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "\"('2017-08-23',)\""
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1677,13 +1677,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x209705380b8>,\n",
-       " 'elevation': 3.0,\n",
-       " 'longitude': -157.8168,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x26faeed47f0>,\n",
        " 'name': 'WAIKIKI 717.2, HI US',\n",
-       " 'id': 1,\n",
+       " 'elevation': 3.0,\n",
        " 'latitude': 21.2716,\n",
-       " 'station': 'USC00519397'}"
+       " 'id': 1,\n",
+       " 'station': 'USC00519397',\n",
+       " 'longitude': -157.8168}"
       ]
      },
      "execution_count": 18,
@@ -2346,21 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2369,7 +2355,7 @@
        "'2010-01-01'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2389,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
