Added images folder to store graphs

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -123,12 +123,12 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x26fad4268d0>,\n",
-       " 'tobs': 65.0,\n",
-       " 'prcp': 0.08,\n",
-       " 'station': 'USC00519397',\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1eb764c6978>,\n",
        " 'date': '2010-01-01',\n",
-       " 'id': 1}"
+       " 'prcp': 0.08,\n",
+       " 'id': 1,\n",
+       " 'station': 'USC00519397',\n",
+       " 'tobs': 65.0}"
       ]
      },
      "execution_count": 9,
@@ -1677,13 +1677,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x26faeed47f0>,\n",
-       " 'name': 'WAIKIKI 717.2, HI US',\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1eb765bf320>,\n",
        " 'elevation': 3.0,\n",
-       " 'latitude': 21.2716,\n",
+       " 'longitude': -157.8168,\n",
+       " 'name': 'WAIKIKI 717.2, HI US',\n",
        " 'id': 1,\n",
-       " 'station': 'USC00519397',\n",
-       " 'longitude': -157.8168}"
+       " 'latitude': 21.2716,\n",
+       " 'station': 'USC00519397'}"
       ]
      },
      "execution_count": 18,
@@ -2375,12 +2375,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Close Session\n",
-    "#session.close()"
+    "session.close()"
    ]
   }
  ],
